RESOLVED FIXED286044
[WebKit] Fix availability versions for macOS 15.2 / iOS 18.2 / visionOS 2.2
https://bugs.webkit.org/show_bug.cgi?id=286044
Summary [WebKit] Fix availability versions for macOS 15.2 / iOS 18.2 / visionOS 2.2
Elliott Williams
Reported 2025-01-15 17:43:11 PST
Attachments
Radar WebKit Bug Importer
Comment 1 2025-01-15 17:44:46 PST
Elliott Williams
Comment 2 2025-01-15 17:45:17 PST
EWS
Comment 3 2025-01-21 14:32:52 PST
Committed 289205@main (3fff74a32e85): <https://commits.webkit.org/289205@main> Reviewed commits have been landed. Closing PR #39111 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.