[WebKit] Fix availability versions for macOS 15.2 / iOS 18.2 / visionOS 2.2 https://bugs.webkit.org/show_bug.cgi?id=286044 rdar://142980455

Reviewed by Timothy Hatcher.

Mechanically replace TBA macros with release versions, for API changes
that shipped in these OS releases. Hold back some WKWebExtension
changes, because the overall Web Extensions API did not become public
until after WebKit-7620 branched, in
https://commits.webkit.org/283635@main.

There were no JavaScriptCore API changes.

* Source/WebKit/UIProcess/API/Cocoa/WKDownload.h:
* Source/WebKit/UIProcess/API/Cocoa/WKDownloadDelegate.h:
* Source/WebKit/UIProcess/API/Cocoa/WKDownloadDelegatePrivate.h:
* Source/WebKit/UIProcess/API/Cocoa/WKMenuItemIdentifiersPrivate.h:
* Source/WebKit/UIProcess/API/Cocoa/WKNavigationDelegatePrivate.h:
* Source/WebKit/UIProcess/API/Cocoa/WKPreferencesPrivate.h:
* Source/WebKit/UIProcess/API/Cocoa/WKWebViewConfigurationPrivate.h:
* Source/WebKit/UIProcess/API/Cocoa/WKWebViewPrivate.h:
* Source/WebKit/UIProcess/API/Cocoa/WKWebpagePreferences.h:
* Source/WebKit/UIProcess/API/Cocoa/WKWebsiteDataStorePrivate.h:
* Source/WebKit/UIProcess/API/Cocoa/_WKActivatedElementInfo.h:
* Source/WebKit/UIProcess/API/Cocoa/_WKApplicationManifest.h:
* Source/WebKit/UIProcess/API/Cocoa/_WKElementAction.h:
* Source/WebKit/UIProcess/API/Cocoa/_WKNotificationData.h:
* Source/WebKit/UIProcess/API/Cocoa/_WKPageLoadTiming.h:
* Source/WebKit/UIProcess/API/Cocoa/_WKTextPreview.h:
* Source/WebKit/UIProcess/API/Cocoa/_WKWebExtensionSidebar.h:
* Source/WebKit/UIProcess/API/Cocoa/_WKWebsiteDataStoreConfiguration.h:
* Source/WebKit/WebProcess/InjectedBundle/API/mac/WKWebProcessPlugInBrowserContextController.h:

Canonical link: https://commits.webkit.org/289205@main