Source/WebKit/UIProcess/API/Cocoa/_WKWebExtensionSidebar.h
@@ -45,7 +45,7 @@ WK_HEADER_AUDIT_BEGIN(nullability, sendability)
  @abstract A `_WKWebExtensionSidebar` object encapsulates the properties for a specific web extension sidebar.
  @discussion When this property is `nil`, it indicates that the action is the default action and not associated with a specific tab.
  */
-WK_CLASS_AVAILABLE(macos(WK_MAC_TBA), ios(WK_IOS_TBA), visionos(WK_XROS_TBA))
+WK_CLASS_AVAILABLE(macos(15.2), ios(18.2), visionos(2.2))
 NS_SWIFT_NAME(WKWebExtension.Sidebar)
 @interface _WKWebExtensionSidebar : NSObject
 
